--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login/Sign Up Form Wellyfy</title>
+    <title>Login/Sign Up Form EzyEvent</title>
     <link rel="shortcut icon" href="images/heart.png" />
     <link rel="stylesheet" href="style.css" />
     <link
