--- a/cart/cart.html
+++ b/cart/cart.html
@@ -16,12 +16,12 @@
       crossorigin="anonymous"
     />
 
-    <title>Cart Wellyfy</title>
+    <title>Cart EzyEvent</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="../index.html">Wellyfy</a>
+      <a class="navbar-brand" href="../index.html">EzyEvent</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -57,34 +57,7 @@
                 <a class="dropdown-item" href="#our-products">Grocery</a>
               </div>
             </div> -->
-            <input
-              class="form-control mr-sm-1"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-              style="width: auto"
-            />
-            <button
-              class="btn btn-md btn-outline-success my-2 my-sm-0"
-              type="submit"
-            >
-              Search
-            </button>
-          </form>
-          <li class="nav-item mx-2">
-            <a
-              style="font-size: 1.3rem"
-              class="nav-link text-white"
-              href="../index.html#our-products"
-            >
-              <button class="btn btn-light btn-md">
-                <img
-                  src="https://img.icons8.com/nolan/21/shopping-cart-loaded.png"
-                />
-                Shop Now
-              </button>
-            </a>
-          </li>
+            
           <!-- 
           <li class="nav-item active mx-2">
             <a class="nav-link" href="#">
@@ -239,15 +212,7 @@
             >
           </li> -->
           <!-- Profile Icon Ends -->
-          <li class="nav-item mx-2">
-            <a
-              style="font-size: 1rem"
-              class="nav-link text-white"
-              href="../index.html#why-wellyfy"
-            >
-              <button class="btn btn-light">Why Wellyfy?</button></a
-            >
-          </li>
+          
         </ul>
       </div>
     </nav>
