--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         color: black;
       }
     </style>
-    <title>WELLYFY</title>
+    <title>EZYEVENT</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="./index.html">Wellyfy</a>
+      <a class="navbar-brand" href="./index.html">EzyEvent</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -84,13 +84,13 @@
             <a
               style="font-size: 1.3rem"
               class="nav-link text-white"
-              href="#our-products"
+              href="#our-services"
             >
               <button class="btn btn-light btn-md">
                 <img
                   src="https://img.icons8.com/nolan/21/shopping-cart-loaded.png"
                 />
-                Shop Now
+                Our Services
               </button>
             </a>
           </li>
@@ -100,10 +100,10 @@
             <a
               style="font-size: 1rem"
               class="nav-link text-white"
-              href="#why-wellyfy"
+              href="#why-ezyevent"
             >
               <button class="btn btn-light">
-                Why Wellyfy
+                Why EzyEvent?
                 <img
                   src="https://img.icons8.com/officel/24/000000/why-us-female.png"
                 /></button
@@ -151,10 +151,10 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="detail-box">
-                      <h1>WELLFY - The One Stop Shop for all your needs</h1>
+                      <h1>EZYEVENT - India's Most Popular Eventplace</h1>
                       <p>
                         Peruse through our catalogue and pick your golden apple
-                        from our wide range of products.
+                        from our wide range of vendors, caterer and venues.
                       </p>
                     </div>
                   </div>
@@ -171,11 +171,11 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="detail-box">
-                      <h1>The BIG WELLFY SALE</h1>
-                      <h4>From 9th - 15th April 2021</h4>
+                      <h1>EZYEVENT EZYPRICES</h1>
+                      <h4>From 9th - 15th April 2025</h4>
                       <br />
                       <p>
-                        Find sale offers upto 40% on Mobile Accessories and much
+                        Find discount offers upto 40% on Caterers and much
                         more
                       </p>
                       <a href=""> Biggest Offers </a>
@@ -194,12 +194,10 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="detail-box">
-                      <h1>WELLFY Daily Deals</h1>
+                      <h1>EZYEVENT - EASY ASSURANCE</h1>
                       <p>
-                        Come and grab ahold of the hottest things on the market!
-                        We put daily deals on the hottest potatoes of the bunch
+                        You can rest assured with EZYASSURANCE, we guaranteed a full money refund if your services are rendered unsatisfactory
                       </p>
-                      <a> Grab them Hot potatoes </a>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -235,12 +233,12 @@
       </section>
     </div>
 
-    <!-- product section -->
+    <!-- services section -->
 
-    <section id="our-products" class="product_section layout_padding">
+    <section id="our-services" class="product_section layout_padding">
       <div class="container">
         <div class="heading_container heading_center">
-          <h2>OUR PRODUCTS</h2>
+          <h2>OUR SERVICES</h2>
         </div>
         <div class="row">
           <div class="col-sm-6 col-lg-4">
@@ -251,6 +249,7 @@
                 <a class="add_cart_btn">
                   <span> Add To Cart </span>
                 </a>
+
               </div>
               <div class="detail-box">
                 <h5>Cannon Digital Camera</h5>
@@ -462,7 +461,7 @@
 
     <!-- why us section -->
 
-    <section id="why-wellyfy" class="why_us_section layout_padding">
+    <section id="why-ezyevent" class="why_us_section layout_padding">
       <div class="container">
         <div class="heading_container heading_center">
           <h2>Why Choose Us</h2>
@@ -525,7 +524,7 @@
             <div class="info_contact">
               <h5>
                 <a href="" class="navbar-brand">
-                  <span> WELLFY </span>
+                  <span> EZYEVENT </span>
                 </a>
               </h5>
               <p>
@@ -534,11 +533,11 @@
               </p>
               <p>
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                +91 9876543210
+                +91 88414 37548
               </p>
               <p>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                wellfyproject@gmail.com
+                ezyevent@gmail.com
               </p>
             </div>
           </div>
