--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="img-box">
-                      <img src="images/Wellfy Logo [No BG].png" alt="" />
+                    <div class="">
+                      <img src="images/Wellfy Logo [No BG].png" alt="" height="300px" width="300px"/>
                     </div>
                   </div>
                 </div>
@@ -178,12 +178,11 @@
                         Find discount offers upto 40% on Caterers and much
                         more
                       </p>
-                      <a href=""> Biggest Offers </a>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="img-box">
-                      <img src="images/bigsale.png" alt="" />
+                    <div class="">
+                      <img src="images/bigsale.png" alt="" height="300px" width="300px"/>
                     </div>
                   </div>
                 </div>
@@ -201,8 +200,8 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="img-box">
-                      <img src="images/hotpotato.png" alt="" />
+                    <div class="">
+                      <img src="images/hotpotato.png" alt="" height="300px" width="300px"/>
                     </div>
                   </div>
                 </div>
@@ -473,10 +472,9 @@
                 <img src="images/w1.png" alt="" />
               </div>
               <div class="detail-box">
-                <h5>Speedy Delivery</h5>
+                <h5>Budget-Friendly Planning</h5>
                 <p>
-                  We deliver our products from end-to-end nationwide in the most
-                  effecient way possible
+                  💰 Find services that fit your budget – Compare vendors, venues, and caterers with transparent pricing to make informed decisions without overspending
                 </p>
               </div>
             </div>
@@ -487,10 +485,9 @@
                 <img src="images/w2.png" alt="" />
               </div>
               <div class="detail-box">
-                <h5>Secure Shipping</h5>
+                <h5>All-in-One Convenience</h5>
                 <p>
-                  Our deliveries are handled by our well behaved staff and we
-                  treat our customers right
+                  📍 Everything in one platform – Easily browse and book verified vendors, photographers, and venues, all tailored to your budget and event type
                 </p>
               </div>
             </div>
@@ -501,11 +498,9 @@
                 <img src="images/w3.png" alt="" />
               </div>
               <div class="detail-box">
-                <h5>Highest Quality</h5>
+                <h5>Smart Price Matching</h5>
                 <p>
-                  Our products are guaranteed quality of the highest order and
-                  are sourced by the best and most legitimate sellers on the
-                  market
+                  🔍 Personalized recommendations – Our platform suggests the best options within your budget, ensuring you get top-quality services without financial stress
                 </p>
               </div>
             </div>
