Final Changes to main webpage

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="">
-                      <img src="images/Wellfy Logo [No BG].png" alt="" height="300px" width="300px"/>
+                    <div class="img-box">
+                      <img src="images/ezyevent.png" alt=""/>
                     </div>
                   </div>
                 </div>
@@ -200,8 +200,8 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="">
-                      <img src="images/hotpotato.png" alt="" height="300px" width="300px"/>
+                    <div class="img-box">
+                      <img src="images/ezyassurance.png" alt=""/>
                     </div>
                   </div>
                 </div>
@@ -251,15 +251,15 @@
 
               </div>
               <div class="detail-box">
-                <h5>Cannon Digital Camera</h5>
+                <h5>The Leela Palace, Chennai</h5>
                 <div class="product_info">
-                  <h5>₹<span>23999</span></h5>
+                  <h5><a href="https://www.wedmegood.com/wedding-venues/The-Leela-Palace-34377">Check Price >>> </a></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -274,15 +274,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Wireless Android Controller</h5>
+                <h5>The Royal Palms, Chennai</h5>
                 <div class="product_info">
-                  <h5>₹<span>1999</span></h5>
+                  <i>Starting from</i><h5>₹<span>1,50,000.00</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -297,15 +297,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Stark Drone</h5>
+                <h5>Anand Farms, Chennai </h5>
                 <div class="product_info">
-                  <h5>₹<span>5999</span></h5>
+                  <h5>₹<span>1,75,000.00</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -320,9 +320,9 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Macro Lens</h5>
+                <h5>JS Catering Services</h5>
                 <div class="product_info">
-                  <h5>₹<span>3999</span></h5>
+                  <h5>₹<span>300.00/plate</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -343,15 +343,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Dolby Speakers</h5>
+                <h5>Taj Coromandel Catering Services </h5>
                 <div class="product_info">
-                  <h5>₹<span>6999</span></h5>
+                  <h5>₹<span>1,600.00/plate</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -366,9 +366,9 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Game Controller</h5>
+                <h5>Venus Catering Services (Veg Only)</h5>
                 <div class="product_info">
-                  <h5>₹<span>2599</span></h5>
+                  <h5><a href="https://venuscateringservice.com/services.html">Check Price >>></a></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -389,15 +389,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Drone</h5>
+                <h5>Studio A</h5>
                 <div class="product_info">
-                  <h5>₹<span>21999</span></h5>
+                  <i>Starting from</i><h5>₹<span>2,50,000.00</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -412,15 +412,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Nikon Camera</h5>
+                <h5>Foto Zone</h5>
                 <div class="product_info">
-                  <h5>₹<span>14999</span></h5>
+                  <h5>₹<span>35,000.00</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -435,15 +435,15 @@
                 </a>
               </div>
               <div class="detail-box">
-                <h5>Webcam</h5>
+                <h5>Candid Red Studios</h5>
                 <div class="product_info">
-                  <h5>₹<span>899</span></h5>
+                  <i>Starting from</i><h5>₹<span>40,000.00</span></h5>
                   <div class="star_container">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                   </div>
                 </div>
               </div>
@@ -474,7 +474,7 @@
               <div class="detail-box">
                 <h5>Budget-Friendly Planning</h5>
                 <p>
-                  💰 Find services that fit your budget – Compare vendors, venues, and caterers with transparent pricing to make informed decisions without overspending
+                  💰 Compare vendors, venues, and caterers with transparent pricing to make informed decisions without overspending 💰
                 </p>
               </div>
             </div>
@@ -487,7 +487,7 @@
               <div class="detail-box">
                 <h5>All-in-One Convenience</h5>
                 <p>
-                  📍 Everything in one platform – Easily browse and book verified vendors, photographers, and venues, all tailored to your budget and event type
+                  📍 Easily browse and book verified vendors, photographers, and venues, all tailored to your budget and event type 📍
                 </p>
               </div>
             </div>
@@ -500,7 +500,7 @@
               <div class="detail-box">
                 <h5>Smart Price Matching</h5>
                 <p>
-                  🔍 Personalized recommendations – Our platform suggests the best options within your budget, ensuring you get top-quality services without financial stress
+                  🔍 Our platform suggests the best options within your budget, ensuring you get top-quality services without financial stress 🔍
                 </p>
               </div>
             </div>
