minor change (search bar)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               class="form-control mr-sm-1"
               type="search"
               style="width: 300px;"
-              placeholder="Canon,Wireless,Stark..."
+              placeholder="Venues, Catering, Photographers ..."
               aria-label="Search"
               style="width: auto"
             />
